# Outlier_Detection

./: .gitignore  config.yaml  pyproject.toml  readme.md  requirements.txt  schema.md
scripts/: run_ingestion.py
src/: config.py  ingestion.py  models.py  storage.py
src/clients/: data_api.py  gamma_api.py  polygon_rpc.py
src/decoders/: v1_decoder.py  v2_decoder.py
src/stages/: stage_a_discovery.py  stage_b_trades.py  stage_c_onchain.py  stage_d_wallet_index.py  stage_e_price_series.py
tests/fixtures/: sample_market.json  sample_onchain_log.json  sample_trades.json
tests/integration/: test_end_to_end.py
tests/unit/: test_normalizers.py  test_parsers.py
vizz/: cat_dist.py  mig_dist.py  out.txt  permarket.py  res_dist.py  trade_dist.py
