[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "polymarket-ingest"
version = "0.1.0"
description = "Polymarket batch ingestion module — read-only, Parquet/DuckDB backend"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyarrow>=15.0",
    "duckdb>=0.10",
    "pyyaml>=6.0",
    "web3>=6.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.28",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
